--- a/css/about.css
+++ b/css/about.css
@@ -405,11 +405,98 @@ a.nav-link.fw-bold.active {
     font-size: 0.875rem;
   }
 
-  .why-choose-item {
-    font-size: 0.75rem;
-    padding: 0.5rem;
+  .offer-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+}
+
+.body-card {
+  padding: 15px;
+  flex: 1;
+}
+
+.body-card h4 {
+  font-size: 1.7rem;
+  font-weight: 700;
+  color: var(--primary-color);
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.body-card p {
+  text-align: center;
+  font-size: 1rem;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-md-6,
+.col-lg-3 {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 350px) and (max-width: 750px) {
+  .offer-card {
+    padding: 1.5rem 0 0;
+    height: 200px;
   }
 }
+
+@media (max-width: 767px) {
+  .offer-card {
+    margin-bottom: 20px;
+  }
+
+  .body-card {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .offer-card {
+    margin-bottom: 20px;
+  }
+
+  .body-card {
+    padding: 12px;
+  }
+}
+
+@media (min-width: 992px) {
+  .offer-card {
+    margin-bottom: 20px;
+  }
+
+  .body-card {
+    padding: 15px;
+  }
+}
+  
+.why-choose-list {
+  list-style: none;
+  padding: 0;
+}
+
+.why-choose-item {
+  background-color: var(--primary-color);
+  color: var(--light-text-color);
+  border: 2px solid var(--secondary-color);
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  font-size: 1rem;
+  text-align: center;
+}
+
 
 /*-----------------------------------
    Footer
